# ElyHa

./: .gitignore  LaunchGUI.bat  LaunchGUI.sh  LaunchTUI.bat  LaunchTUI.sh  LaunchWebUI.bat  LaunchWebUI.sh  README.md  prepare.bat  prepare.sh  preset.json  pyproject.toml  termux_prepare.sh
.github/workflows/: Web_Build.yml
.venv-win/: pyvenv.cfg
LLMRequester/: AmazonbedrockRequester.py  AnthropicRequester.py  AsyncLLMRequester.py  AsyncOpenaiRequester.py  AsyncSignalHub.py  AsyncTaskExecutor.py  ErrorClassifier.py  GoogleRequester.py  LLMClientFactory.py  LLMRequester.py  OpenaiRequester.py  ProviderFingerprint.py
data/core_configs/: Elysia.json  core.json
docs/: README.ja.md  README.zh.md  api_contract.md  architecture.md  runbook.md  storage_schema.md
elyha_api/: __init__.py  app.py
elyha_core/: __init__.py  core_config.py  i18n.py  llm_presets.py
elyha_core/adapters/: legacy_llmrequester_adapter.py  llm_adapter.py  local_api_adapter.py
elyha_core/models/: __init__.py  edge.py  node.py  operation.py  project.py  snapshot.py  task.py
elyha_core/services/: Tools.py  __init__.py  ai_service.py  context_assembler.py  context_service.py  export_service.py  graph_service.py  insight_service.py  project_service.py  prompt_template_service.py  readable_content_tool_service.py  review_service.py  snapshot_service.py  (+5 more)
elyha_tui/: __init__.py  main.py
elyha_web/: .env.example  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
i18n/: en.json  ja.json  zh.json
scripts/: agent_loop_ab_compare.py  demo_flow.sh  init_dev.sh  migrate.py
(+79 files in other folders)
