[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elyha"
version = "0.1.0"
description = "ElyHa core-first AI novel authoring toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.7,<14",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
  "langgraph>=0.2,<1",
  "tiktoken>=0.8,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
elyha = "elyha_tui.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["elyha_core*", "elyha_tui*", "elyha_api*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
